[package]
name = "demo-egui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.35.0"
log = "0.4"
egui-system-fonts = { path = "../egui-system-fonts" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }
